--- a/插件.md
+++ b/插件.md
@@ -5,3 +5,4 @@
 - [文字复制插件](https://windrunnermax.github.io/TKScript/copy.user.js)
 - [下载用的](https://greasyfork.org/zh-CN/scripts/462218-kubedown)
 - [网页视频倍速，网盘，网课](https://chrome.google.com/webstore/detail/global-speed/jpbjcnkcffbooppibceonlgknpkniiff)
+- [查看自己浏览器当前ip](https://chrome.google.com/webstore/detail/my-ip-address/monhkdcehmbdgkhgpccaccbbcgcfpjkd)
